--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/registration_done.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/registration_done.html
@@ -5,13 +5,11 @@
 {% block robots %}noindex,nofollow{% endblock %}
 
 {% block content %}
-	<div class="success">
-		<p>{% trans "You have successfully registered a new account. Go to the" %} <a href="{% url 'profile_overview' %}">{% trans "login page" %}</a> {% trans "to authenticate and start using this site" %}.</p>
-	</div>
-{% endblock %}
-{% block content-related %}
-  <div class="box">
-    <h3>{% trans "Register a new account" %}</h3>
-    <p>{% trans "Joining this community is quick and easy. You only need to fill the form to get access to all the private content" %}.</p>
-  </div>
+
+    <div class="row">
+        <div class="span16">
+            <p>{% trans "You have successfully registered a new account. In a few minutes you will receive a validation email on your mailbox to validate your registration. You can go now to the" %} <a href="{% url 'profile_overview' %}">{% trans "login page" %}</a> {% trans "to authenticate and start using this site." %}</p>
+        </div>
+    </div>
+
 {% endblock %}
