Updated password change templates to bootstrap

--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_change.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_change.html
@@ -1,8 +1,7 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Password change for' %} {{ user }}{% endblock %}
-{% block robots %}noindex,nofollow{% endblock %}
 
 {% block extrajs %}
 <script type="text/javascript">
@@ -13,43 +12,72 @@
 </script>
 {% endblock %}
 
-{% block nav-main %}
-{% include "userprofile/menu.html" %}
-{% endblock %}
-
 {% block content %}
-	<form action="" method="post" accept-charset="utf-8">
-	<fieldset>
-		<legend>{% trans 'Password change for' %} {{ user }}</legend>
-		<label for="id_old_password">{% trans "Old password" %}</label>
-		<p>{{ form.old_password }}
-			{% if form.old_password.errors %}
-				<span class="quiet red"><br />* {{ form.old_password.errors|join:"; " }}</span>
-			{% endif %}
-		</p>
-		<label for="id_new_password1">{% trans "New password" %}</label>
-		<p>{{ form.new_password1 }}
-			{% if form.new_password1.errors %}
-				<span class="quiet red"><br />* {{ form.new_password1.errors|join:"; " }}</span>
-			{% endif %}
-		</p>
-		<label for="id_new_password2">{% trans "Confirm password" %}</label>
-		<p>{{ form.new_password2 }}
-			{% if form.new_password2.errors %}
-				<span class="quiet red"><br />* {{ form.new_password2.errors|join:"; " }}</span>
-			{% endif %}
-		</p>
-		{% if form.non_field_errors %}
-			<ul class="quiet red">{{ form.non_field_errors.as_ul }}</ul>
-		{% endif %}
-	</fieldset>
-	<p><input type="submit" value="{% trans 'Change' %}" /></p>
-	</form>
-{% endblock %}
 
-{% block content-related %}
-	<div class="box">
-		<h3>{% trans 'Password change' %}</h3>
-		<p>{% trans "Password change utility page. Please enter your new password twice so we can verify you typed it in correctly" %}.</p>
-	</div>
+    <div class="row">
+        <div class="span16">
+            <h4>{% trans "Password change for" %} {{ user }}</h4>
+            <form action="" method="post" accept-charset="utf-8">
+                {% if form.non_field_errors %}
+                    {% for error in form.non_field_errors %}
+                        <span class="help-inline">{{ error|escape }}</span>
+                    {% endfor %}
+                {% endif %}
+
+                <div class="clearfix {% if form.old_password.errors %}error{% endif%}">
+                    <label for="prependedInput">{% trans "Old password" %}</label>
+                    <div class="input">
+                        {{ form.old_password }}
+                        <span class="help-inline">
+                            {% if form.old_password.errors %}
+                                {% for error in form.old_password.errors %}
+                                    {{ error|escape }}
+                                {% endfor %}
+                            {% else %}
+                                {{ form.old_password.help_text }}
+                            {% endif %}
+                        </span>
+                    </div>
+                </div>
+
+                <div class="clearfix {% if form.new_password1.errors %}error{% endif%}">
+                    <label for="prependedInput">{% trans "New password" %}</label>
+                    <div class="input">
+                        {{ form.new_password1 }}
+                        <span class="help-inline">
+                            {% if form.new_password1.errors %}
+                                {% for error in form.new_password1.errors %}
+                                    {{ error|escape }}
+                                {% endfor %}
+                            {% else %}
+                                {{ form.new_password1.help_text }}
+                            {% endif %}
+                        </span>
+                    </div>
+                </div>
+
+                <div class="clearfix {% if form.new_password2.errors %}error{% endif%}">
+                    <label for="prependedInput">{% trans "Confirm password" %}</label>
+                    <div class="input">
+                        {{ form.new_password2 }}
+                        <span class="help-inline">
+                            {% if form.new_password2.errors %}
+                                {% for error in form.new_password2.errors %}
+                                    {{ error|escape }}
+                                {% endfor %}
+                            {% else %}
+                                {{ form.new_password2.help_text }}
+                            {% endif %}
+                        </span>
+                    </div>
+                </div>
+
+                <hr />
+                <a href="{% url 'profile_overview' %}" class="btn">&laquo; {% trans "Go back" %}</a>
+                <input class="btn primary" type="submit" value="{% trans 'Modify' %}" />
+
+            </form>
+        </div>
+    </div>
+
 {% endblock %}
