--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_change_done.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_change_done.html
@@ -1,22 +1,15 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Password change successful' %}{% endblock %}
-{% block robots %}noindex,nofollow{% endblock %}
-
-{% block nav-main %}
-{% include "userprofile/menu.html" %}
-{% endblock %}
 
 {% block content %}
-	<p class="success large">
-		{% trans "The password has been changed successfully" %}.
-	</p>
-{% endblock %}
 
-{% block content-related %}
-  <div class="box">
-    <h3>{% trans 'Password change' %}</h3>
-    <p>{% trans "Password change utility page. Please enter your new password twice so we can verify you typed it in correctly" %}.</p>
-  </div>
+    <div class="row">
+        <div class="span16">
+            <h2>{% trans "The password has been changed successfully." %}</h2>
+            <a href="{% url 'profile_overview' %}">{% trans 'Go back' %}</a>
+        </div>
+    </div>
+
 {% endblock %}
