Updated password reset templates for bootstrap

--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset_confirm.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset_confirm.html
@@ -13,47 +13,56 @@
 </script>
 {% endblock %}
 
-{% block nav-main %}
-{% include "userprofile/menu.html" %}
-{% endblock %}
-
 {% block content %}
 
-{% if validlink %}
+    {% if validlink %}
+	    <form action="" method="post" accept-charset="utf-8">
+            {% if form.non_field_errors %}
+                {% for error in form.non_field_errors %}
+                    <span class="help-inline">{{ error|escape }}</span>
+                {% endfor %}
+            {% endif %}
 
-	<form action="" method="post" accept-charset="utf-8">
-	<fieldset>
-		<label for="id_new_password1">{% trans "New password" %}</label>
-		<p>{{ form.new_password1 }}
-			{% if form.new_password1.errors %}
-				<span class="quiet red"><br />* {{ form.new_password1.errors|join:"; " }}</span>
-			{% endif %}
-		</p>
-		<label for="id_new_password2">{% trans "Confirm password" %}</label>
-		<p>{{ form.new_password2 }}
-			{% if form.new_password2.errors %}
-				<span class="quiet red"><br />* {{ form.new_password2.errors|join:"; " }}</span>
-			{% endif %}
-		</p>
-		{% if form.non_field_errors %}
-			<ul class="quiet red">{{ form.non_field_errors.as_ul }}</ul>
-		{% endif %}
-	</fieldset>
-	<p><input type="submit" value="{% trans 'Change' %}" /></p>
+            <div class="clearfix {% if form.new_password1.errors %}error{% endif%}">
+                <label for="prependedInput">{% trans "New password" %}</label>
+                <div class="input">
+                    {{ form.new_password1 }}
+                    <span class="help-inline">
+                        {% if form.new_password1.errors %}
+                            {% for error in form.new_password1.errors %}
+                                {{ error|escape }}
+                            {% endfor %}
+                        {% else %}
+                            {{ form.new_password1.help_text }}
+                        {% endif %}
+                    </span>
+                </div>
+            </div>
+            <div class="clearfix {% if form.new_password2.errors %}error{% endif%}">
+                <label for="prependedInput">{% trans "Confirm password" %}</label>
+                <div class="input">
+                    {{ form.new_password2 }}
+                    <span class="help-inline">
+                        {% if form.new_password2.errors %}
+                            {% for error in form.new_password2.errors %}
+                                {{ error|escape }}
+                            {% endfor %}
+                        {% else %}
+                            {{ form.new_password2.help_text }}
+                        {% endif %}
+                    </span>
+                </div>
+            </div>
+
+            <hr />
+            <a href="{% url 'profile_overview' %}" class="btn">&laquo; {% trans "Go back" %}</a>
+            <input class="btn primary" type="submit" value="{% trans 'Change' %}" />
 	</form>
 
-{% else %}
-  <div class="error">
-		<h3>{% trans 'Password reset unsuccessful' %}</h3>
-		<p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}
-  </div>
-{% endif %}
+    {% else %}
+        <div class="error">
+		    <h3>{% trans 'Password reset unsuccessful' %}</h3>
+		    <p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}
+        </div>
+    {% endif %}
 {% endblock %}
-
-{% block content-related %}
-	<div class="box">
-		<h3>{% trans 'Password reset' %}</h3>
-		<p>{% trans "Password reset utility page. Please enter your new password twice so we can verify you typed it in correctly" %}.</p>
-	</div>
-{% endblock %}
-
