--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset.html
@@ -1,40 +1,42 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans "Password reset" %}{% endblock %}
-{% block robots %}noindex,nofollow{% endblock %}
-
-{% block extrajs %}
-<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.validation.js"></script>
-<script type="text/javascript">
-	$(function() {
-		$("#id_email").focus();
-		$("input[type='text']").addClass("text");
-	});
-</script>
-{% endblock %}
 
 {% block content %}
-	<form action="" method="post" accept-charset="utf-8">
-	<fieldset>
-		<legend>{% trans "Password reset" %}</legend>
-		<label for="id_email">{% trans 'E-mail address' %}</label>
-		<p>{{ form.email }}
-			{% if form.email.errors %}
-				<span class="quiet red"><br />* {{ form.email.errors|join:"; " }}</span>
-			{% endif %}
-		</p>
-		{% if form.non_field_errors %}
-			<ul class="quiet red">{{ form.non_field_errors.as_ul }}</ul>
-		{% endif %}
-	</fieldset>
-	<p><input type="submit" value="{% trans 'Reset my password' %}" /></p>
-	</form>
-{% endblock %}
 
-{% block content-related %}
-	<div class="box">
-		<h3>{% trans "Password reset form" %}</h3>
-		<p>{% trans "Forgotten your password? Enter your e-mail address, and we'll reset your password and e-mail the new one to you" %}.</p>
-	</div>
+    <div class="row">
+        <div class="span16">
+            <h4>{% trans "Reset password for" %} {{ user }}</h4>
+            <form action="" method="post" accept-charset="utf-8">
+                {% if form.non_field_errors %}
+                    {% for error in form.non_field_errors %}
+                        <span class="help-inline">{{ error|escape }}</span>
+                    {% endfor %}
+                {% endif %}
+
+                <div class="clearfix {% if form.email.errors %}error{% endif%}">
+                    <label for="prependedInput">{% trans 'E-mail address' %}</label>
+                    <div class="input">
+                        {{ form.email }}
+                        <span class="help-inline">
+                            {% if form.email.errors %}
+                                {% for error in form.email.errors %}
+                                    {{ error|escape }}
+                                {% endfor %}
+                            {% else %}
+                                {{ form.email.help_text }}
+                            {% endif %}
+                        </span>
+                    </div>
+                </div>
+
+                <hr />
+                <a href="{% url 'profile_overview' %}" class="btn">&laquo; {% trans "Go back" %}</a>
+                <input class="btn primary" type="submit" value="{% trans 'Reset my password' %}" />
+
+            </form>
+        </div>
+    </div>
+
 {% endblock %}
