--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset_complete.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset_complete.html
@@ -1,22 +1,14 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Password change successful' %}{% endblock %}
-{% block robots %}noindex,nofollow{% endblock %}
-
-{% block nav-main %}
-{% include "userprofile/menu.html" %}
-{% endblock %}
 
 {% block content %}
-	<p class="success large">
-		{% trans "Your password has been set.  You may go ahead and log in now." %}
-	</p>
-{% endblock %}
 
-{% block content-related %}
-  <div class="box">
-    <h3>{% trans 'Password reset' %}</h3>
-    <p>{% trans "Password reset utility page. Please enter your new password twice so we can verify you typed it in correctly" %}.</p>
-  </div>
+    <div class="row">
+        <div class="span16">
+            <h2>{% trans "Your password has been set. You may go ahead and" %} <a href="{% url 'login' %}">{% trans "log in now" %}</a></h2>
+        </div>
+    </div>
+
 {% endblock %}
