--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -1,6 +1,6 @@
 /*
-    Copyright (c) 2010-2011 Cidadanía Coop.
-    Written by: Oscar Carballal Prego <info@oscarcp.com>
+    Copyright (c) 2010-2012 Cidadanía Coop.
+    Written by: Oscar Carballal Prego <oscar.carballal@cidadania.coop>
 
     This file is part of the e-cidadania.
 
@@ -30,6 +30,35 @@ img {
 /* COMMON CUSTOMIZATIONS */
 hr { /* This hr replaces the bootstrap one */
     border-bottom: 1px solid #DDD;
+}
+
+.hidden {
+    display: none;
+}
+
+.error {
+    background: #DDBBBB;
+    border: 1px solid #FF6666;
+}
+
+@font-face {
+    font-family: "SansationRegular";
+    src: url('http://www.fontsforweb.com/public/fonts/424/SansationRegular.eot');
+    src: local("Sansation"), url('http://www.fontsforweb.com/public/fonts/424/SansationRegular.ttf') format("truetype");
+}
+
+#logo {
+    float: left;
+    /* The logo image must be 75px height */
+    width: 150px;
+    height: 105px;
+    padding: 25px 37px 0px 37px;
+}
+
+#banner {
+    float: left;
+    height: 105px;
+    padding-top: 25px;
 }
 /* END COMMON CUSTOMIZATIONS */
 
@@ -95,267 +124,61 @@ hr { /* This hr replaces the bootstrap one */
 .comment_text {
     padding: 0px 10px 0px 10px;
 }
+
+.commentform {
+    border: 1px solid #DDD;
+    background: #EEE;
+    padding: 20px 0 20px 0;
+}
+#comments {
+    margin-top: 40px;
+}
+
+#ctitle {
+    font-size: 2em;
+    margin-left: 10px;
+    margin-bottom: 15px;
+}
+
+#comment {
+    margin: 10px;
+}
+
+#comment .comment_text {
+    margin: 20px;
+    font-size: 14px;
+}
+
+#comment .comment_data {
+    margin: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    background: #CCC;
+    padding: 5px;
+}
+
 /* END COMMENT LIST*/
 
-
-
-
-
-
-
-
-
-/* CUSTOMIZATIONS */
-/*input[type="submit"] {
-/*    border: 1px solid #AACCAA; /*#AAA;*/
-/*    background: #DDFFDD; /*#98FB98; /*#DDD;*/*/
-/*    color: #666;*/
-/*    padding: 5px 10px;*/
-/*}*/
-
-input[type="text"], input[type="password"] {
-    font-size: 2em;
-    border: 1px solid #999;
-    background: url('../assets/inputbg.png') repeat-x;
-    margin: 10px 0 10px 0;
-    padding: 2px;
-    width: 350px;
-    height: 25px;
-
-    /* Fancy round borders for Webkit, Gecko and standard
-       implementations */
-    border-radius: 4px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
+/* LANGUAGE SELECTOR */
+#language {
+    width: 100px;
 }
 
-.fieldWrapper {
-    margin: 10px;
-    padding: 5px;
-    margin-left: 30px;
+#language option {
+    background: #222;
 }
+/* END LANGUAGE SELECTOR */
 
-.fieldWrapper label {
-    display: block;
-    margin: 5px 12px 5px 12px;
-}
-
-.fieldWrapper #form_help_text {
-    display: block;
-    margin: 5px;
-}
-
-@font-face {
-    font-family: "SansationRegular";
-    src: url('http://www.fontsforweb.com/public/fonts/424/SansationRegular.eot');
-    src: local("Sansation"), url('http://www.fontsforweb.com/public/fonts/424/SansationRegular.ttf') format("truetype");
-}
-/* END CUSTOMIZATIONS */
-
-/* INDEX */
-.indexbuttons {
-    margin: auto;
-}
-.bigbutton {
-	display: inline-block;
-	outline: none;
-	cursor: pointer;
-	text-align: center;
-	text-decoration: none;
-	font: 2em/100% Arial, Helvetica, sans-serif;
-	padding: .5em;
-	margin: 35px;
-	text-shadow: 0 1px 1px rgba(0,0,0,.3);
-	-webkit-border-radius: .5em; 
-	-moz-border-radius: .5em;
-	border-radius: .5em;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
-	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
-	box-shadow: 0 1px 2px rgba(0,0,0,.2);
-}
-
-.orange {
-	color: #fef4e9;
-	border: solid 1px #da7c0c;
-	background: #f78d1d;
-	background: -webkit-gradient(linear, left top, left bottom, from(#faa51a), to(#f47a20));
-	background: -moz-linear-gradient(top,  #faa51a,  #f47a20);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#faa51a', endColorstr='#f47a20');
-}
-
-.orange:hover {
-	background: #f47c20;
-	background: -webkit-gradient(linear, left top, left bottom, from(#f88e11), to(#f06015));
-	background: -moz-linear-gradient(top,  #f88e11,  #f06015);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#f88e11', endColorstr='#f06015');
-}
-.orange:active {
-	color: #fcd3a5;
-	background: -webkit-gradient(linear, left top, left bottom, from(#f47a20), to(#faa51a));
-	background: -moz-linear-gradient(top,  #f47a20,  #faa51a);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#f47a20', endColorstr='#faa51a');
-}
-
-.blue {
-    color: #d9eef7;
-    border: solid 1px #0076a3;
-    background: #0095cd;
-    background: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5));
-    background: -moz-linear-gradient(top,  #00adee,  #0078a5);
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#00adee', endColorstr='#0078a5');
-}
-.blue:hover {
-    background: #007ead;
-    background: -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e));
-    background: -moz-linear-gradient(top,  #0095cc,  #00678e);
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#0095cc', endColorstr='#00678e');
-}
-.blue:active {
-    color: #80bed6;
-    background: -webkit-gradient(linear, left top, left bottom, from(#0078a5), to(#00adee));
-    background: -moz-linear-gradient(top,  #0078a5,  #00adee);
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#0078a5', endColorstr='#00adee');
-}
-
-.black {
-    color: #d7d7d7;
-    border: solid 1px #333;
-    background: #333;
-    background: -webkit-gradient(linear, left top, left bottom, from(#666), to(#000));
-    background: -moz-linear-gradient(top,  #666,  #000);
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#666666', endColorstr='#000000');
-}
-.black:hover {
-    background: #000;
-    background: -webkit-gradient(linear, left top, left bottom, from(#444), to(#000));
-    background: -moz-linear-gradient(top,  #444,  #000);
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#444444', endColorstr='#000000');
-}
-.black:active {
-    color: #666;
-    background: -webkit-gradient(linear, left top, left bottom, from(#000), to(#444));
-    background: -moz-linear-gradient(top,  #000,  #444);
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#666666');
-}
-
-.green {
-    color: #e8f0de;
-    border: solid 1px #538312;
-    background: #64991e;
-    background: -webkit-gradient(linear, left top, left bottom, from(#7db72f), to(#4e7d0e));
-    background: -moz-linear-gradient(top,  #7db72f,  #4e7d0e);
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#7db72f', endColorstr='#4e7d0e');
-}
-.green:hover {
-    background: #538018;
-    background: -webkit-gradient(linear, left top, left bottom, from(#6b9d28), to(#436b0c));
-    background: -moz-linear-gradient(top,  #6b9d28,  #436b0c);
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#6b9d28', endColorstr='#436b0c');
-}
-.green:active {
-    color: #a9c08c;
-    background: -webkit-gradient(linear, left top, left bottom, from(#4e7d0e), to(#7db72f));
-    background: -moz-linear-gradient(top,  #4e7d0e,  #7db72f);
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#4e7d0e', endColorstr='#7db72f');
-}
-
-.count {
-    margin-left: 130px;
-    font-size: 2.5em;
-    font-family: "SansationRegular";
-    text-align: center;
-}
-/* END INDEX */
-
-/* COMMON CLASSES */
-.hidden {
-	display: none;
-}
-
-.error {
-    background: #DDBBBB;
-    border: 1px solid #FF6666;
-}
-
-.instructions {
-    list-style: square;
-}
-
-.instructions li {
-    margin: 10px;
-}
-
-.rightlink {
-    font-size: 0.9em;
-    margin-left: 10px;
-    margin-bottom: 5px;
-}
-
-.messages {
-    margin: 0;
-    width: 100%;
-    font-size: 1.3em;
-    color: #666;
-    opacity: 0.99;
-    z-index: 99;
-}
-
-.messages li a {
-    text-decoration: underline;
-}
-.messages li {
-    padding: 5px 10px;
-}
-
-.messages li.info {
-    background: #ffc40c;
-}
-
-.messages li.debug {
-    background: #000;
-    color: #FFF;
-}
-
-.messages li.warning {
-    background: #FF6666;
-    color: #FFF;
-}
-
-.messages li.success {
-    background: #66FF66;
-}
-
-.closemsg {
-    float: right;
-    font-size: 0.7em;
-    background: #FF6666;
-    color: #FFF;
-    margin: 5px;
-    padding: 3px 3px;
-    font-weight: bold;
-}
-
-/* END COMMON CLASSES */
-
-
-/* OTHER CLASSES */
-.introtitle {
-    text-align: right;
-    font-size: 4em;
-}
-
-.intro {
-    font-size: 1.3em;
-    line-height: 1.5em;
-    text-align: justify;
-    margin: 15px;
-}
-/* END OTHER CLASSES */
-
-
-/* DIVS */
-#grid {
-    min-height: 500px;
+/* DEBATE STYLES */
+.specialmargin {
+    width: 90%;
+    padding: 1% 4%;
+    background: #444;
+    border-top: 1px solid #999;
+    border-bottom: 1px solid #999;
+    padding: 40px 4.52%;
+    overflow: hidden;
 }
 
 #deletenote {
@@ -366,364 +189,9 @@ input[type="text"], input[type="password"] {
     width: 16px;
     height: 16px;
 }
+/* END DEBATE STYLES */
 
-#userbar a:hover {
-    color: #AAA;
-}
-
-#userbar a.username {
-    color: #ededed;
-    line-height: 20px;
-    margin-top: 6px;
-    background: #5d5d5d;
-    margin-left: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-}
-
-#userbar form select {
-    background: #222;
-    border: none;
-    color: #EDEDED;
-}
-
-#language {
-    width: 100px;
-}
-
-#language option {
-    background: #222;
-}
-
-#centercol {
-    float: left;
-    padding: 15px;
-    width: 60%;
-}
-
-#rightcol {
-    float: right;
-    padding: 50px 10px 50px 10px;
-    width: 30%;
-    margin: 30px 10px 10px 5px;
-    border-left: 1px solid #aaa;
-}
-
-#widget {
-    width: 90%;
-    padding: 10px;
-    margin: 10px 10px 10px 10px;
-   /* border-bottom: 1px solid #AAA;*/
-}
-
-#widget h2 {
-    background: #EEE;
-    padding: 5px;
-    color: #666;
-    font-weight: bold;
-    text-shadow: #FFF 1px 1px 1px;
-    text-transform: uppercase;
-    border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
-    -moz-border-radius-topleft: 7px;
-    -moz-border-radius-topright: 7px;
-    -webkit-border-top-left-radius: 7px;
-    -webkit-border-top-right-radius: 7px;
-}
-
-#widget p {
-    font-size: 1.2em;
-}
-
-#widgetindex {
-    background: none;
-    color: none;
-    text-transform: normal;
-    font-size: 1.3em;
-    padding: 10px 10px 10px 0px;
-}
-
-#widgetindex p,li {
-    font-size: 0.9em;
-}
-
-#tools {
-    text-align: right;
-    float: right;
-}
-
-.general {
-    border: 1px solid #FEFFB2;
-    background: #FEFFCC;
-}
-
-.header {
-    border-bottom: 3px solid #000;
-    margin-bottom: 20px;
-}
-#header {
-    margin: 0px auto;
-    width: 100%;
-    height: 130px;
-    background: #dfdfdf;
-    border-bottom: 3px solid #000;
-}
-
-#logo {
-    float: left;
-    /* The logo image must be 75px height */
-    width: 150px;
-    height: 105px;
-    padding: 25px 37px 0px 37px; 
-}
-
-#banner {
-    float: left;
-    height: 105px;
-    padding-top: 25px;
-}
-
-/* User Profile stuff */
-.userinfo, .spaces, .activity {
-    margin: 30px 0px 20px 0px;
-}
-
-.data p {
-    margin: 5px;
-}
-
-ul.spaces {
-    list-style-type: square;
-    margin: 0px 0px 0px 30px;
-}
-#content {
-    clear: both;
-    border-top: 1px solid #BBB;
-    width: 98%;
-    padding: 25px 10px 10px 10px;
-    background: url(/static/assets/shadow.png) repeat-x;
-    min-height: 600px;
-}
-
-#contenttitles {
-    font-size: 20px;
-    color: #000;
-    font-weight: bold;
-    margin-bottom: 15px;
-}
-
-#content h3 {
-    font-size: 12px;
-    margin: 10px;
-    text-transform: capitalize;
-}
-
-#contentinside {
-    margin: 25px 20px 20px 13px;
-}
-
-table#personal td {
-    padding-bottom: 20px;
-    padding-left: 15px;
-}
-
-table#personal th {
-    font-weight: normal;
-    text-align: right;
-}
-
-#useropts {
-    color: #555;
-    margin: 10px 0px 0px 10px;
-}
-
-#useropts a {
-    color: #555;
-}
-
-#useropts a:visited, #useropts a:hover {
-    color: #CCC;
-}
-
-#profile_right {
-    float: left;
-    padding: 20px 0px 0px 25px;
-    width: 45%;
-}
-
-#profile_right p {
-    margin-bottom: 10px;
-}
-
-#avatar {
-    float: left;
-    /*border: 1px solid green;*/
-    color: #000;
-}
-
-#profile_left {
-    float: right;
-    width: 45%;
-    padding: 20px 30px 0px 10px;
-    margin-right: 25px;
-}
-
-/* FOOTER STYLE*/
-
-#footer {
-    clear: both;
-    width: 100%;
-    background: #333;
-    border-top: 1px solid #CCC;
-    line-height: 15px;
-    font-size: 10px;
-    color: #888;
-    text-align: right;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-top: 20px;
-}
-
-#footer p {
-    padding: 2px;
-    margin: 5px 30px 5px 30px;
-}
-
-#footer a {
-    color: #DDD;
-}
-
-#footer a:hover, #footer a:visited {
-    color: #666;
-}
-
-#footerimg {
-    float: left;
-    margin-left: 30px;
-}
-/* END DIVS */
-
-
-
-/* USERBAR DROPDOWN */
-ul.topnav {
-	list-style: none;
-	padding: 0 0px;
-	margin: 0;
-	float: left;
-	/*width: 920px;*/
-	background: #222;
-	/*font-size: 1.2em;*/
-	background: url(topnav_bg.gif) repeat-x;
-	font-size: 1.4em;
-}
-ul.topnav li {
-	float: left;
-	margin: 0;
-	padding: 0 0 0 0;
-	position: relative; /*--Declare X and Y axis base for sub navigation--*/
-}
-
-ul.topnav li.sep {
-    border-left: 1px solid #262626;
-    border-right: 1px solid #515151;
-	margin: 7.5px 5px 0 5px;
-	height: 20px;
-}
-ul.topnav li a{
-	padding: 0px 5px;
-	color: #fff;
-	display: block;
-	text-decoration: none;
-	float: left;
-}
-ul.topnav li a:hover{
-	background: url(topnav_hover.gif) no-repeat center top;
-}
-ul.topnav li span { /*--Drop down trigger styles--*/
-	width: 17px;
-	height: 35px;
-	float: left;
-	margin-top: 0px;
-	background: url(/static/assets/subnav_btn.gif) no-repeat center top;
-}
-ul.topnav li span.subhover {background-position: center bottom; cursor: pointer;} /*--Hover effect for trigger--*/
-ul.topnav li ul.subnav {
-	list-style: none;
-	position: absolute; /*--Important - Keeps subnav from affecting main navigation flow--*/
-	left: 0; top: 32px;
-	background: #333;
-	margin: 0; padding: 0;
-	display: none;
-	float: left;
-	width: 100px;
-	border: 1px solid #111;
-}
-ul.topnav li ul.subnav li{
-	margin: 0; padding: 0;
-	border-top: 1px solid #252525; /*--Create bevel effect--*/
-	border-bottom: 1px solid #444; /*--Create bevel effect--*/
-	clear: both;
-	width: 100px;
-}
-html ul.topnav li ul.subnav li a {
-	float: left;
-	width: 90px;
-	background: #333 url(dropdown_linkbg.gif) no-repeat 10px center;
-	padding-left: -3px;
-}
-html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
-	background: #222 url(dropdown_linkbg.gif) no-repeat 10px center;
-}
-
-/* END STYLE FOR DROPDOWN */
-
-
-
-/********************/
-/* CUSTOM PAGES CSS */
-/********************/
-
-/* LOGIN */
-#loginblock {
-    width: 370px;
-    margin: 50px auto 50px auto;
-    background: #f9f9f9;
-    border: 1px solid #ddd;
-    padding: 10px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
-}
-
-#loginblock fieldset {
-    margin: auto;
-}
-
-#loginblock fieldset legend {
-    padding: 7px 0px 20px 0px;
-    margin: 25px 10px 10px 10px;
-    font-size: 1.6em;
-    font-weight: bold;
-}
-
-#loginblock label {
-    margin: 15px;
-    padding-top: 10px;
-}
-
-#loginblock a {
-    color: #666;
-}
-
-#loginblock a:hover {
-    color: #000;
-    text-decoration: underline;
-}
-/* ENDLOGIN */
-
-/* PROPOSALS */
+/* PROPOSAL STYLES */
 #proposal-wrapper {
     border: none;
     background: none;
@@ -770,45 +238,13 @@ html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
     font-style: italic;
     margin-bottom: 5px;
 }
-
-.commentform {
-    border: 1px solid #DDD;
-    background: #EEE;
-    padding: 20px 0 20px 0;
-}
-#comments {
-    margin-top: 40px;
-}
-
-#ctitle {
-    font-size: 2em;
-    margin-left: 10px;
-    margin-bottom: 15px;
-}
-
-#comment {
-    margin: 10px;
-}
-
-#comment .comment_text {
-    margin: 20px;
-    font-size: 14px;
-}
-
-#comment .comment_data {
-    margin: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    background: #CCC;
-    padding: 5px;
-}
+/* END PROPOSAL STYLES */
 
 /* NEWS */
 .post {
     width: 100%;
     /* border-bottom: 5px solid #aaa;*/
-    background: #f3f3f3;
+    background: #EEE;
     margin: 20px 5px 20px 5px;
     padding: 5px;
     -webkit-border-top-left-radius: 20px;
@@ -947,23 +383,6 @@ td.filled ul li a {
 }
 /* END CALENDAR */
 
-/* SPACES */
-#spaceitem {
-    margin: 15px;
-    padding: 10px;
-}
-
-.spacetitle {
-    color: #000;
-    font-size: 2em;
-}
-
-.spacedesc {
-    color: #BBB;
-    font-size: 1em;
-}
-/* END SPACES */
-
 /* DEBATE */
 #debate, #debate td, #debate th {
     border-style: none;
@@ -1040,7 +459,7 @@ table .criteria-title {
 }
 
 .debate-ttitle {
-    margin: 5px;
+    margin: 1px -10px;
     border-top: 1px solid #CCC;
     border-bottom: 1px solid #CCC;
     border-left: 1px solid #CCC;
