--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -93,6 +93,9 @@
             </div>
 
         </div>
+
+        {% block freewidth %}
+        {% endblock %}
         
         <footer style="background:#EEE;padding-bottom:10px;border-bottom:1px solid #DDD;margin-bottom:15px;border-top:1px solid #DDD;">
 	        <div class="row" style="width:960px;margin:auto;">
